--- a/index.html
+++ b/index.html
@@ -3,20 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bits, Boot & Beyond | Systems Programming Blog</title>
+    <title>Bits, Boot & Beyond</title>
     <meta name="description" content="Deep technical insights into Linux Kernel internals, Embedded Systems, SoC architecture, and FPGA development." />
-    <meta name="author" content="Avinash Lalotra" />
+    <meta name="author" content="Abinash Lalotra" />
     <meta name="keywords" content="Linux kernel, embedded systems, FPGA, SoC, systems programming, device drivers" />
 
     <meta property="og:title" content="Bits, Boot & Beyond" />
     <meta property="og:description" content="Exploring Linux Kernel, Embedded Systems, SoC Design, and FPGA." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Bits, Boot & Beyond" />
-    <meta name="twitter:description" content="Deep technical insights into systems programming" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="moto.png" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
